--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,17 @@ spring.datasource.password=123
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-edu.istu.host=localhost:8080/
-edu.istu.upload-directory=D:/ISTU/Database/course_work/free-art/src/main/resources/uploads/
-edu.istu.avatar-folder=localhost:8080/uploads/avatars/
-edu.istu.image-folder=localhost:8080/uploads/images/
+edu.istu.free-art.host=localhost:8080/
+edu.istu.free-art.upload-directory=D:/ISTU/Database/course_work/free-art/src/main/resources/uploads/
+edu.istu.free-art.avatar-folder=src/main/resources/uploads/avatars
+edu.istu.free-art.image-folder=src/main/resources/uploads/images
+edu.istu.free-art.default-avatar-name=default.png
+edu.istu.free-art.auction-delay=60
+edu.istu.free-art.default-points=1000
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
